# nucleo-h743zi

./: Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
