[package]
name = "main"
version = "0.1.0"
authors = ["Alexey Kosinov <kosinov@protonmail.com>"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]
description = "Simple 'Hello World!' snippet for nucleo-h743zi development board"
keywords = ["arm", "cortex-m", "stm32h7xx", "hal"]

[dependencies]
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"
embedded-hal = "0.2.7"
panic-halt = "0.2"
nb = "1.0.0"
stm32h7xx-hal = { version="0.11.0", features=["stm32h743v"] }

[profile.dev]
debug = true

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
